Added correlation matrix plot and efficient frontier plot
tested with 1000, needs to be changed for more simulations

--- a/EfficientFrontier.ipynb
+++ b/EfficientFrontier.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "6587981b-0d3e-42bb-8bc4-94333d8b9203",
+   "execution_count": null,
+   "id": "5b10629a-8b30-4487-a5a1-6bb5d033296b",
    "metadata": {
     "tags": []
    },
@@ -14,17 +14,6 @@
      "text": [
       "[*********************100%***********************]  7 of 7 completed\n"
      ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'dsiplay' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_4096782/2320219796.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     66\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     67\u001b[0m \u001b[0mef\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mEfficientFrontier\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreturns\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mreturns\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0massets\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstocks\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 68\u001b[0;31m \u001b[0mdsiplay\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mef\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCalc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mef\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcorrelation\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'dsiplay' is not defined"
-     ]
     }
    ],
    "source": [
@@ -33,14 +22,15 @@
     "import numpy as np\n",
     "import datetime as dt\n",
     "import yfinance as yf\n",
-    "from IPython.display import display\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sn\n",
     "\n",
     "stocks = ['AAPL', 'TSLA', 'NVDA', 'K', 'CRSP', 'NEM', 'PLTR']\n",
     "\n",
     "end_date = dt.datetime.today()\n",
     "start_date = end_date - dt.timedelta(2*365)\n",
     "\n",
-    "price = yf.download(stocks, period = '2y')['Adj Close'].pct_change()\n",
+    "price = yf.download(stocks, period = '2y')['Adj Close'].pct_change().dropna()\n",
     "\n",
     "returns = price\n",
     "\n",
@@ -50,52 +40,56 @@
     "        self.assets = assets\n",
     " \n",
     "    def Calc(self):\n",
-    "        tbl = pd.DataFrame(index = self.assets)\n",
-    "        tbl['Mean'] = self.returns.mean()\n",
-    "        tbl['Variance'] = self.returns.var()\n",
-    "        return tbl.T\n",
+    "        self.tbl = pd.DataFrame(index = self.assets)\n",
+    "        self.tbl['Mean'] = self.returns.mean()\n",
+    "        self.tbl['Variance'] = self.returns.var()\n",
+    "        return self.tbl.T\n",
     "   \n",
     "    def correlation(self):\n",
-    "        tbl = pd.DataFrame(index = self.assets)\n",
-    "        corr = self.returns.corr()\n",
-    "        return corr\n",
+    "        self.tbl = pd.DataFrame(index = self.assets)\n",
+    "        self.corr = self.returns.corr()\n",
+    "        return self.corr\n",
     "    \n",
     "    #code taken from https://www.youtube.com/watch?v=Isutk-wqJfE\n",
     "    def PortfolioReturn(self, weight):\n",
-    "        portfolio_returns = np.sum(self.returns.mean() * weight) * 252\n",
-    "        return portfolio_returns\n",
-    "    #code taken from https://www.youtube.com/watch?v=Isutk-wqJfE\n",
-    "    def PortfolioVolume(self, weight):\n",
-    "        std = np.sqrt(np.dot(weight.T, np.dot(self.returns.cov() * 252, weight)))\n",
-    "        return std \n",
+    "        return np.sum(self.returns.mean() * weight) * 252\n",
     "    \n",
+    "    #code taken from https://www.youtube.com/watch?v=Isutk-wqJfE\n",
+    "    def PortfolioVolatility(self, weight):\n",
+    "        return np.sqrt(np.dot(weight.T, np.dot(self.returns.cov() * 252, weight))) \n",
     "returnCol = []\n",
-    "volumeCol = []\n",
+    "volatilityCol = []\n",
     "weightsCol = []\n",
     "sharperatioCol = []\n",
+    "\n",
+    "ef = EfficientFrontier(returns = returns, assets = stocks)\n",
     "    \n",
-    "for i in range (100000):\n",
+    "for i in range (1000):\n",
     "    \n",
     "    weights = np.random.random(len(stocks))\n",
     "    weights /= np.sum(weights)\n",
     "    weightsCol.append(weights)\n",
     "    port_return = ef.PortfolioReturn(weights)\n",
-    "    port_volatility = ef.PortfolioVolume(weights)\n",
+    "    port_volatility = ef.PortfolioVolatility(weights)\n",
     "    returnCol.append(port_return)\n",
-    "    volumeCol.append(port_volatility)\n",
+    "    volatilityCol.append(port_volatility)\n",
     "    \n",
-    "    sharpe_ratio = (port_return - 0.01)/ port_volatility\n",
-    "    sharperatioCol.append(sharpe_ratio)\n",
-    "    \n",
-    "portfolio_results = pd.DataFrame({\n",
-    "    'Return' : returnCol,\n",
-    "    'Volatility' : volumeCol,\n",
-    "    'SharpeRatio' : sharperatioCol,\n",
-    "    'Weights' : weightsCol\n",
-    "})\n",
+    "ER = np.array(returnCol)\n",
+    "EV = np.array(volatilityCol)\n",
+    "sharpe_ratio = (ER - 0.01)/ EV\n",
     "\n",
-    "ef = EfficientFrontier(returns = returns, assets = stocks)\n",
-    "dsiplay(ef.Calc().T, ef.correlation())"
+    "display(ef.Calc().T, ef.correlation())\n",
+    "\n",
+    "plt.figure(figsize=(6, 6))\n",
+    "sn.heatmap(returns.corr(), annot=True, cmap=\"coolwarm\")\n",
+    "\n",
+    "plt.figure(figsize = (10, 6))\n",
+    "plt.scatter(EV, ER, c = sharpe_ratio, cmap = 'viridis')\n",
+    "plt.title('Efficient Frontier')\n",
+    "plt.xlabel('expected volatility')\n",
+    "plt.ylabel('expected return')\n",
+    "plt.colorbar(label = 'Sharpe ratio')\n",
+    "plt.show()\n"
    ]
   },
   {
