added comment on linear regression

--- a/EfficientFrontier.ipynb
+++ b/EfficientFrontier.ipynb
@@ -84,6 +84,7 @@
     "        \n",
     "        return returnCol, volatilityCol, sharperatioCol, optimal_weights\n",
     "    \n",
+    "#code for linear regression taken from video: https://www.youtube.com/watch?v=vAmlFBpipT8 \n",
     "    def sharpeMinzd(self, weight):\n",
     "        return -(self.PortfolioReturn(weight)-.02) / self.PortfolioVolatility(weight)\n",
     "\n",
